# stackvm

./: INSTALL  LICENSE  Main.hs  README  README.md  Setup.hs  StackVM.cabal  package.json  server.js  virtual-beanstalk.cabal
Beanstalk/: VM.hs  Web.hs
StackVM/: VM.hs  Web.hs
config/: server.json
data/: entries.sql  users.json  vm.sql
lib/: base64.js  chat.js  clientcode.js  config.js  encoder.js  fb.js  managers.js  model.js  remote.js  remote_emitter.js  resource.js  service.js  session.js  stackvm.js  vm.js  web.js  webserver.js
lib/managers/: qemu.js  vmware.js
lib/models/: access.js  contact.js  contacts.js  disk.js  fb.js  framebuffer.js  instance.js  manager.js  managers.js  mode.js  process.js  setup.js  user.js
lib/models/fb/: encoder.js  (+1 more)
lib/resources/: chat.js  contacts.js  fb.js  process.js  processes.js
lib/setup/: config.js  deploy.js  mkdir_p.js  starter.js  user.js
lib/web/: player.js
nodejs/: repl.js  stackvm.js  webserver.js  webstack.js
nodejs/libs/: base64.js  buffer_list.js  node-xml.js  xmpp.js
nodejs/static/: crossdomain.xml
nodejs/views/: layout.html
static/: crossdomain.xml
static/css/: chat.css  fb.css  login.css  sidebar.css  style.css  vm.css  window.css  workspace.css
static/html/: index.html
static/js/: chat.js  connection.js  console.js  display.js  fb.js  keymap.js  quickbar.js  require.js  session.js  sidebar.js  site.js  tabbar.js  titlebar.js  ui.js  vm.js  window.js  workspace.js  xmpp.js
test/: mode.js  user.js
views/: console.html  index.html  layout.html  login_bar.html  player.html  userbar.html
(+34 files in other folders)
